# fw-led-stat-control

./: .gitignore  .service  Cargo.toml  README.md  build.sh  config.toml
build_scripts/: build.sh  fw-systemstats.service
package/: fw-led-stat-control.service  fw-led-stat-control.spec
plugins/: .gitignore  README.md  battery.wasm  cpu.wasm  memory.wasm  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stub.wasm  stub2.wasm  time.wasm
plugins/battery/: package.json
plugins/battery/assembly/: env.d.ts  index.ts  transform.ts  tsconfig.json
plugins/cpu/: package.json
plugins/cpu/assembly/: env.d.ts  index.ts  transform.ts
plugins/memory/: package.json
plugins/memory/assembly/: env.d.ts  index.ts  transform.ts
plugins/scripts/: bundle_plugins.sh
plugins/time/: package.json  pnpm-lock.yaml
plugins/time/assembly/: env.d.ts  index.ts  transform.ts
scripts/: build_release.sh
src/: canvas.rs  config.rs  controller.rs  env.rs  led_controller.rs  main.rs  matrix.rs  picture.rs  plugin.rs  system_stat_monitor.rs  wasm_module.rs
src/plugins/battery/assembly/: env.d.ts  index.ts
templates/: config.toml
