[package]
name = "fw-systemstats"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
log = "0.4.28"
serialport = { version = "4.7.3", default-features = false }
systemstat = "0.2.5"
wasmer = { version = "6.0.1", features = ["cranelift"] }
serde_json = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
