[package]
name = "fw-systemstats"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
log = "0.4.28"
serialport = { version = "4.7.3", default-features = false }
wasmer = { version = "6.0.1", features = ["cranelift"] }
serde_json = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.7"
env_logger = "0.11.8"
dbus = { version = "0.9.9", features = ["vendored"] }
dbus-crossroads = "0.5.2"
sysinfo = "0.36.1"
battery = "0.7.8"
rand = "0.9.2"
